<resources>
    <string name="app_name">SmartHomeApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Bottom Menu Options-->
    <string name="menu_overview">Overview</string>
    <string name="menu_divisions">Divisions</string>
    <string name="menu_events">Events</string>
    <string name="menu_control">Control</string>
    <string name="menu_settings">Settings</string>

    <string name="header_devices">Devices</string>

    <!-- Login Screen -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_load_house_config">Load House Configuration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remember_me">Remember me</string>

    <!-- Strings related to contentDescriptions of images -->
    <string name="logo_content_description">Logo Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Events Screen -->
    <string name="device_event">Device %1$s changed property %2$s to value %3$s.</string>
    <string name="user_event">User %1$s changed property %2$s from device %3$s to value %4$s.</string>

    <!-- Divisions Screen -->
    <string name="no_divisions_all">This house has no divisions!!!</string>

    <!-- Devices Screen -->
    <string name="no_devices_all">This division has no devices!!!</string>


    <!-- Settings Screen -->
    <string name="log_out">Log out</string>
    <string name="loading_devices">Loading devices ...</string>

</resources>
