<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:weightSum="5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action_overview"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/menu_icon_size"
            android:layout_height="@dimen/menu_icon_size"
            android:layout_marginTop="@dimen/menu_option_margin"
            android:src="@drawable/ic_apps"
            android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/menu_option_margin"
            android:text="@string/menu_overview"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action_divisions"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/menu_icon_size"
            android:layout_height="@dimen/menu_icon_size"
            android:src="@drawable/ic_home"
            android:layout_marginTop="@dimen/menu_option_margin"
            android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/menu_option_margin"
            android:text="@string/menu_divisions"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action_events"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/menu_icon_size"
            android:layout_height="@dimen/menu_icon_size"
            android:src="@drawable/ic_notifications"
            android:layout_marginTop="@dimen/menu_option_margin"
            android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/menu_option_margin"
            android:text="@string/menu_events"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action_control"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/menu_icon_size"
            android:layout_height="@dimen/menu_icon_size"
            android:src="@drawable/ic_settings_remote"
            android:layout_marginTop="@dimen/menu_option_margin"
            android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/menu_option_margin"
            android:text="@string/menu_control"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action_settings"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/menu_icon_size"
            android:layout_height="@dimen/menu_icon_size"
            android:src="@drawable/ic_settings"
            android:layout_marginTop="@dimen/menu_option_margin"
            android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/menu_option_margin"
            android:text="@string/menu_settings"/>
    </LinearLayout>

</LinearLayout>
